--- a/src/html/main.html
+++ b/src/html/main.html
@@ -76,6 +76,14 @@
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Яйцо</h3>
 							</div>
+
+							<div class="we-produce-card__content">
+								<p class="we-produce-card__content-title">
+									Мы производим экологически чистые, рафинированные и дезодорированные пищевые растительные масла: рапсовое и подсолнечное
+								</p>
+
+								<a href="#" class="we-produce-card__content-link">Подробнее</a>
+							</div>
 						</div>
 
 						<div class="we-produce__card">
@@ -83,6 +91,14 @@
 
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Рапс</h3>
+							</div>
+
+							<div class="we-produce-card__content">
+								<p class="we-produce-card__content-title">
+									Мы производим экологически чистые, рафинированные и дезодорированные пищевые растительные масла: рапсовое и подсолнечное
+								</p>
+
+								<a href="#" class="we-produce-card__content-link">Подробнее</a>
 							</div>
 						</div>
 					</div>
@@ -94,6 +110,14 @@
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Мясо</h3>
 							</div>
+
+							<div class="we-produce-card__content">
+								<p class="we-produce-card__content-title">
+									Мы производим сертифицированную мясную продукцию (более 230 наименований и товарных позиций), соответствующую нормативной технической документации Республики Беларусь (ГОСТ, СТБ, ТУ) и рецептурам выработки, утверждённым в установленном порядке
+								</p>
+
+								<a href="#" class="we-produce-card__content-link">Подробнее</a>
+							</div>
 						</div>
 					</div>
 
@@ -104,6 +128,14 @@
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Масла</h3>
 							</div>
+
+							<div class="we-produce-card__content">
+								<p class="we-produce-card__content-title">
+									Мы производим экологически чистые, рафинированные и дезодорированные пищевые растительные масла: рапсовое и подсолнечное
+								</p>
+
+								<a href="#" class="we-produce-card__content-link">Подробнее</a>
+							</div>
 						</div>
 
 						<div class="we-produce__card">
@@ -111,6 +143,14 @@
 
 							<div class="we-produce-card__info">
 								<h3 class="we-produce-card__title">Кукуруза</h3>
+							</div>
+
+							<div class="we-produce-card__content">
+								<p class="we-produce-card__content-title">
+									Мы производим экологически чистые, рафинированные и дезодорированные пищевые растительные масла: рапсовое и подсолнечное
+								</p>
+
+								<a href="#" class="we-produce-card__content-link">Подробнее</a>
 							</div>
 						</div>
 					</div>
