--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -3,7 +3,7 @@
 		<div class="header__inner">
 			<div class="header__logo logo">
 				<a href="/" class="header-logo__link logo__link">
-					<img src="@img/logo.svg" alt="Лого" class="header-logo__img logo__img">
+					<img src="@img/logo-ptica.svg" alt="Лого" class="header-logo__img logo__img">
 
 					<div class="header-logo__texts logo__texts">
 						<span>Гродненская</span>
