--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -69,7 +69,10 @@
 	<nav class="header-burger__nav">
 		<ul class="header-burger-nav__list">
 			<li class="header-burger-nav__item">
-				<a href="#" class="header-burger-nav__link">О компании</a>
+				<div class="header-burger-nav__top">
+					<a href="#" class="header-burger-nav__link">О компании</a>
+					<img src="@img/nav-item-arrow.svg" alt="arrow">
+				</div>
 
 				<ul class="header-burger-nav__menu">
 					<li class="header-burger-nav__menu-item"><a href="#">Доска почёта</a></li>
@@ -79,7 +82,10 @@
 				</ul>
 			</li>
 			<li class="header-burger-nav__item">
-				<a href="#" class="header-burger-nav__link">Продукция</a>
+				<div class="header-burger-nav__top">
+					<a href="#" class="header-burger-nav__link">Продукция</a>
+					<img src="@img/nav-item-arrow.svg" alt="arrow">
+				</div>
 
 				<ul class="header-burger-nav__menu">
 					<li class="header-burger-nav__menu-item"><a href="#">Яйцо</a></li>
