add language widget, eye widget

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -15,8 +15,10 @@
 					</div>
 		
 					<div class="footer-widget__eye">
-						<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
-						<span>Версия для слабовидящих</span>
+						<a href="javascript://" onclick="letsee_toggle_panel()">
+							<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
+							<span>Версия для слабовидящих</span>
+						</a>
 					</div>
 				</div>
 		
@@ -61,8 +63,10 @@
 				</div>
 
 				<div class="footer-widget__eye footer-widget__outside-eye">
-					<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
-					<span>Версия для слабовидящих</span>
+					<a href="javascript://" onclick="letsee_toggle_panel()">
+						<img src="@img/eye.svg" alt="Версия для слабовидящих" class="footer-widget__eye-img">
+						<span>Версия для слабовидящих</span>
+					</a>
 				</div>
 			</div>
 		</div>
