--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+		<link rel="stylesheet" href="/letsee/letsee.css"/>
+		
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		<script src="/letsee/letsee.js"></script>
+
+		<script src="./js/yatranslate.js"></script>
 		<script src="js/app.min.js"></script>
 	</body>
 </html>
