fixed eye widget

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,18 @@
 		@@include('html/footer.html')
 
 		@@include('html/modals.html')
-
+		
+		<button class="spec">Версия для слабовидящих</button>
 		
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-		<link rel="stylesheet" href="/letsee/letsee.css"/>
-		
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		<script src="/letsee/letsee.js"></script>
+
+		<script type="text/javascript" src="specver/js/jquery-2.2.3.min.js"  charset="utf-8"></script>
+		<script type="text/javascript" src="specver/js/jquery.cookie.js"  charset="utf-8"></script>
+		<script type="text/javascript" src="specver/js/specver.js" charset="utf-8"></script>
 
 		<script src="./js/yatranslate.js"></script>
 		<script src="js/app.min.js"></script>
