--- a/src/html/intro.html
+++ b/src/html/intro.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header--absolute">
 	<div class="container">
 		<div class="header__inner">
 			<div class="header__logo logo">
