fixed tenancy titles

--- a/src/tenancy.html
+++ b/src/tenancy.html
@@ -120,9 +120,11 @@
                             <div class="tenancy-item__top">
                                 <div class="tenancy-item__left">
                                     <h3 class="tenancy-item__count">1</h3>
-                                    <div class="tenancy-item__text">
+                                    <div class="tenancy-item__titles">
                                         <h4 class="tenancy-item__title">Здание «Кузня мастерские Кореневичи»</h4>
-                                        <p class="tenancy-item__text">Площадь 160 кв.м., здание бригадного домика, площадью - 70 м.кв., и прилагаемую асфальтированную площадку, площадью - 0,90 га, расположенного по адресу Гродненская обл, Гродненский р-н, в районе д. Кореневичи.</p>
+                                        <div class="tenancy-item__text">
+											<p>Площадь 160 кв.м., здание бригадного домика, площадью - 70 м.кв., и прилагаемую асфальтированную площадку, площадью - 0,90 га, расположенного по адресу Гродненская обл, Гродненский р-н, в районе д. Кореневичи.</p>
+										</div>
                                     </div>
                                 </div>
                                 <div class="tenancy-item__right">
@@ -139,9 +141,11 @@
                             <div class="tenancy-item__top">
                                 <div class="tenancy-item__left">
                                     <h3 class="tenancy-item__count">2</h3>
-                                    <div class="tenancy-item__text">
+                                    <div class="tenancy-item__titles">
                                         <h4 class="tenancy-item__title">Удобные беседки на озере Бросты</h4>
-                                        <p class="tenancy-item__text">Беседки могут вместить в себя до 20 человек каждая. Так же имеется одна вместимостью 6–10 человек. Все беседки оборудованы встроенными мангалами. Удобное расположение беседок позволяет так же вместить на одной поляне компанию до 40 человек. Каждая беседка имеет выход к озеру. Удобное расположение озера в 3 км от Гродно позволит легко добраться к беседкам, и так же вернуться домой после отдыха.</p>
+                                        <div class="tenancy-item__text">
+											<p>Беседки могут вместить в себя до 20 человек каждая. Так же имеется одна вместимостью 6–10 человек. Все беседки оборудованы встроенными мангалами. Удобное расположение беседок позволяет так же вместить на одной поляне компанию до 40 человек. Каждая беседка имеет выход к озеру. Удобное расположение озера в 3 км от Гродно позволит легко добраться к беседкам, и так же вернуться домой после отдыха.</p>
+										</div>
                                     </div>
                                 </div>
                                 <div class="tenancy-item__right">
@@ -163,9 +167,11 @@
                             <div class="tenancy-item__top">
                                 <div class="tenancy-item__left">
                                     <h3 class="tenancy-item__count">3</h3>
-                                    <div class="tenancy-item__text">
+                                    <div class="tenancy-item__titles">
                                         <h4 class="tenancy-item__title">База отдыха «Погораны»</h4>
-                                        <p class="tenancy-item__text">Находится всего в 5 км от города Гродно на высоком берегу Немана, в тихом и спокойном месте. Идеально подходит для проведения корпоративов, семейных праздников, первого и второго дней свадебного торжества и просто отдыха вдали от городской суеты в выходные и будние дни. К Вашим услугам: большая благоустроенная территория, 4 уютных беседки: одна на 12 мест, три по 6–8 мест, а также беседка-навес (60 мест), мангал, комната отдыха, 28 спальных мест (4-х местные комнаты), зал для проведения мероприятий, пользование кухней (холодильник, газовая плита, электрический чайник, микроволновая печь).</p>
+                                        <div class="tenancy-item__text">
+											<p>Находится всего в 5 км от города Гродно на высоком берегу Немана, в тихом и спокойном месте. Идеально подходит для проведения корпоративов, семейных праздников, первого и второго дней свадебного торжества и просто отдыха вдали от городской суеты в выходные и будние дни. К Вашим услугам: большая благоустроенная территория, 4 уютных беседки: одна на 12 мест, три по 6–8 мест, а также беседка-навес (60 мест), мангал, комната отдыха, 28 спальных мест (4-х местные комнаты), зал для проведения мероприятий, пользование кухней (холодильник, газовая плита, электрический чайник, микроволновая печь).</p>
+										</div>
                                     </div>
                                 </div>
                                 <div class="tenancy-item__right">
