--- a/src/news.html
+++ b/src/news.html
@@ -121,17 +121,19 @@
                                 <div class="news__item">
                                     <!-- <a href="#"> -->
                                         <div class="news-item__wrapper">
-                                            <a href="#">
-                                                <img src="@img/news/5.jpg" alt="" class="news-item__img">
-                                            </a>
-                                            <a href="#">
-                                                <h3 class="news-item__title">Совещание совета безопасности</h3>
-                                            </a>
-                                            <p class="news-item__text">На расширенном заседании Совета Безопасности обсуждали ситуацию в Украине и вокруг наших границ. К разговору пригласили не только представителей силового блока, но и руководство Совета Министров, местной власти, руководителей СМИ и экспертов.</p>
-                                            <div class="news-item__bottom">
-                                                <span class="news-item__date">23 февраля 2022</span>
-                                                <a href="#" class="news-item__link">Подробнее</a>
-                                            </div>
+											<div class="news-item__inner">
+												<a href="#">
+													<img src="@img/news/5.jpg" alt="" class="news-item__img">
+												</a>
+												<a href="#">
+													<h3 class="news-item__title">Совещание совета безопасности</h3>
+												</a>
+												<p class="news-item__text">На расширенном заседании Совета Безопасности обсуждали ситуацию в Украине и вокруг наших границ. К разговору пригласили не только представителей силового блока, но и руководство Совета Министров, местной власти, руководителей СМИ и экспертов.</p>
+												<div class="news-item__bottom">
+													<span class="news-item__date">23 февраля 2022</span>
+													<a href="#" class="news-item__link">Подробнее</a>
+												</div>
+											</div>
                                         </div>
                                     <!-- </a> -->
                                 </div>
@@ -139,17 +141,59 @@
                                 <div class="news__item">
                                     <!-- <a href="#"> -->
                                         <div class="news-item__wrapper">
-                                            <a href="#">
-                                                <img src="@img/news/6.jpg" alt="" class="news-item__img">
-                                            </a>
-                                            <a href="#">
-                                                <h3 class="news-item__title">С днём защитника Отечества!</h3>
-                                            </a>
-                                            <p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля! Желаем вам силы, мужества и отваги. Пусть каждый день будет успешным, каждый поступок - достойным, каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
-                                            <div class="news-item__bottom">
-                                                <span class="news-item__date">23 февраля 2022</span>
-                                                <a href="#" class="news-item__link">Подробнее</a>
-                                            </div>
+											<div class="news-item__inner">
+												<a href="#">
+													<img src="@img/news/6.jpg" alt="" class="news-item__img">
+												</a>
+												<a href="#">
+													<h3 class="news-item__title">С днём защитника Отечества!</h3>
+												</a>
+												<p class="news-item__text">Каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
+												<div class="news-item__bottom">
+													<span class="news-item__date">23 февраля 2022</span>
+													<a href="#" class="news-item__link">Подробнее</a>
+												</div>
+											</div>
+                                        </div>
+                                    <!-- </a> -->
+                                </div>
+
+								<div class="news__item">
+                                    <!-- <a href="#"> -->
+                                        <div class="news-item__wrapper">
+                                            <div class="news-item__inner">
+												<a href="#">
+													<img src="@img/news/6.jpg" alt="" class="news-item__img">
+												</a>
+												<a href="#">
+													<h3 class="news-item__title">С днём защитника Отечества!</h3>
+												</a>
+												<p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля!</p>
+												<div class="news-item__bottom">
+													<span class="news-item__date">23 февраля 2022</span>
+													<a href="#" class="news-item__link">Подробнее</a>
+												</div>
+											</div>
+                                        </div>
+                                    <!-- </a> -->
+                                </div>
+
+								<div class="news__item">
+                                    <!-- <a href="#"> -->
+                                        <div class="news-item__wrapper">
+                                            <div class="news-item__inner">
+												<a href="#">
+													<img src="@img/news/6.jpg" alt="" class="news-item__img">
+												</a>
+												<a href="#">
+													<h3 class="news-item__title">С днём защитника Отечества!</h3>
+												</a>
+												<p class="news-item__text">Дорогие и незаменимые мужчины, поздравляем вас с 23 февраля! Желаем вам силы, мужества и отваги. Пусть каждый день будет успешным, каждый поступок - достойным, каждая идея - отличной, каждое слово - твердым, а каждое действие - уверенным!</p>
+												<div class="news-item__bottom">
+													<span class="news-item__date">23 февраля 2022</span>
+													<a href="#" class="news-item__link">Подробнее</a>
+												</div>
+											</div>
                                         </div>
                                     <!-- </a> -->
                                 </div>
